--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/easy-lasagna.html">Easy Lasagna</a>
+    <ul>
+        <li><a href="./recipes/easy-lasagna.html">Easy Lasagna</a></li>
+        <li><a href="./recipes/one-pot-spaghetti.html">One Pot Spaghetti</a></li>
+        <li><a href="./recipes/raspberry-blackberry-smoothie.html">Raspberry Blackberry Smoothie</a></li>
+    </ul>
 </body>
 </html>
