Resize all images to width:800 px

--- a/recipes/easy-lasagna.html
+++ b/recipes/easy-lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Easy Lasagna</h1>
-    <img src="./img/easy-lasagna.jpg" alt="A cooked Lasagna">
+    <img src="./img/easy-lasagna.jpg" alt="A cooked Lasagna" style="width: 800px;">
     <!-- Recipe Description -->
     <p>An easy lasagna recipe that saves me lots of time. This recipe is simple and satisfies everyone in the family. Try it tonight!</p>
     <h2>Ingredients</h2>
