--- a/recipes/one-pot-spaghetti.html
+++ b/recipes/one-pot-spaghetti.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>One Pot Spaghetti</h1>
-    <img src="./img/one-pot-spaghetti.jpg" alt="Finished image of one pot spaghetti">
+    <img src="./img/one-pot-spaghetti.jpg" alt="Finished image of one pot spaghetti" style="width: 800px;">
     <!-- Recipe Description -->
     <p>My variation of an old Southern Living recipe - a double recipe will fill a Dutch oven and make plenty for an extended family dinner.</p>
     <h2>Ingredients</h2>
