--- a/recipes/raspberry-blackberry-smoothie.html
+++ b/recipes/raspberry-blackberry-smoothie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Raspberry Blackberry Smoothie</h1>
-    <img src="./img/raspberry-blackberry-smoothie.jpg" alt="A delicious raspberry blackberry smoothie">
+    <img src="./img/raspberry-blackberry-smoothie.jpg" alt="A delicious raspberry blackberry smoothie" style="width: 800px;"">
     <!-- Recipe Description -->
     <p>A delicious smoothie!</p>
     <h2>Ingredients</h2>
